# notion_autotest_API

./: .env  README.md  pyproject.toml  pytest.ini
helpers/: setting_info.py
locators/: locator.py
pages/: page_registration.py
tests/: conftest.py  test_register_account.py
