[tool.poetry]
name = "notion-autotest-api"
version = "0.1.0"
description = ""
authors = ["Vitalii <evit.viter@gmail.com>"]
readme = "README.md"
packages = [{include = "notion_autotest_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
