[tool.poetry]
name = "notion-autotest-api"
version = "0.1.0"
description = ""
authors = ["Vitalii <evit.viter@gmail.com>"]
readme = "README.md"
packages = [{include = "notion_autotest_api"}]

[tool.poetry.dependencies]
python = "3.10.5"
pytest = "^7.4.0"
selenium = "^4.10"
selene = "^2.0.0rc3"
allure-pytest = "^2.13.2"
python-dotenv ="^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
